styles for skills page

--- a/views/projects.pug
+++ b/views/projects.pug
@@ -1,5 +1,5 @@
 //- define styles for this page
-- const projectCard = `flex flex-col text-center bg-gray-100 mr-5 mb-5 rounded-md`;
+- const projectCard = `flex flex-col text-center bg-gray-100 mr-5 mb-5 rounded-lg`;
 - const h2Styles = `text-3xl font-bold uppercase leading-10 my-4 p-2`;
 - const pStyles = `text-sm p-6 mb-4 leading-normal`;
 - const hoverEnlarge = `transition duration-500 ease-in-out hover:text-red-600 transform hover:-translate-y-1 hover:scale-110`;
