--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -328,7 +328,7 @@ ul.transition li {
   // wrappers on every page
   .wrapper {
     position: static;
-    max-width: 950px;
+    max-width: 1200px;
     height: 100%;
     margin: 0;
   }
@@ -360,6 +360,9 @@ ul.transition li {
     img {
       width: auto;
       max-width: 100%;
+    }
+    .text-sm {
+      font-size: 1.2rem;
     }
   }
 
@@ -417,7 +420,6 @@ ul.transition li {
     width: 80%;
     top: 4rem;
     padding: 2rem;
-
   }
 
   // **** Media queries for contact page
@@ -453,7 +455,7 @@ ul.transition li {
 
   // social media buttons: icons
   .mobile {
-    color: #4c51bf;;
+    color: #4c51bf;
     bottom: 1rem;
     background: #fff;
     border-radius: 4px;
@@ -479,3 +481,210 @@ ul.transition li {
   }
 }
 
+@media (max-width: 768px) {
+  // overall styles
+  main {
+    display: flex;
+    position: relative;
+    z-index: 3;
+  }
+
+  .text {
+    &-4xl {
+      font-size: 6vw;
+      margin-top: 5rem;
+    }
+    &-3xl {
+      font-size: 4.2vw;
+      margin-top: 5rem;
+    }
+    &-2xl {
+      font-size: 5vw;
+    }
+    &-xl {
+      font-size: 4vw;
+    }
+  }
+
+  .font-normal {
+    font-size: 3vw;
+  }
+
+  .fa-3x {
+    font-size: 4em;
+  }
+
+  p {
+    font-size: 3vw;
+  }
+
+  dl {
+    font-size: 3vw;
+  }
+
+  // mobile nav menu
+  #overlay ul {
+    font-size: 5vw;
+  }
+
+  // homepage introduction div
+  .introduction {
+    margin-top: 50%;
+  }
+
+  // wrappers on every page
+  .wrapper {
+    position: static;
+    max-width: 1200px;
+    height: 100%;
+    margin: 0;
+  }
+
+  // imgs on every page
+  img {
+    width: 400px;
+  }
+  // if mobile screen, hide the large nav
+  .desktop {
+    display: none;
+  }
+
+  #overlay {
+    visibility: hidden;
+    display: block;
+  }
+
+  #overlay-button {
+    visibility: visible;
+    display: block;
+  }
+
+  // **** Media queries for projects page
+  .project {
+    width: 80vw;
+    height: auto;
+    margin-top: 1rem;
+    img {
+      width: auto;
+      max-width: 100%;
+    }
+    .text-sm {
+      font-size: 1.8rem;
+      font-weight: 500;
+    }
+  }
+
+  // **** Media queries for skills page
+
+  .skillCard {
+    width: 40rem;
+    height: auto;
+    padding: 1.5rem;
+    margin-top: 1rem;
+  }
+
+  .skills {
+    position: relative;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    z-index: 0;
+  }
+
+  // **** Media queries for resume download animation
+  .resumeDwnload {
+    position: fixed;
+    width: auto;
+    left: -60%;
+    margin-top: 5%;
+    padding-left: 4%;
+    z-index: 1;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+    -webkit-animation: slide 0.5s forwards;
+    -webkit-animation-delay: 1s;
+    animation: slide 0.5s forwards;
+    animation-delay: 1s;
+  }
+
+  // **** Media queries for about page
+  .aboutBG {
+    height: 100vh;
+  }
+
+  .aboutHeader {
+    position: relative;
+    top: 3rem;
+  }
+
+  .aboutEmphasis {
+    font-size: 3rem;
+  }
+
+  .bg-local {
+    visibility: hidden;
+  }
+
+  .aboutContent {
+    position: relative;
+    width: 80%;
+    top: 4rem;
+    padding: 2rem;
+  }
+
+  // **** Media queries for contact page
+
+  .contactBG {
+    height: 100vh;
+  }
+
+  iframe {
+    position: relative;
+    top: 5rem;
+    width: 90vw;
+  }
+
+  .contactButtons {
+    visibility: hidden;
+  }
+
+  .contactContents {
+    top: auto;
+  }
+
+  // social media buttons styles
+  .socialButtons {
+    visibility: visible;
+    display: inline-block;
+    position: relative;
+    top: 27%;
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  // social media buttons: icons
+  .mobile {
+    color: #4c51bf;
+    bottom: 1rem;
+    background: #fff;
+    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 4rem;
+    position: relative;
+    display: inline-block;
+    width: 9rem;
+    height: 9rem;
+    padding-top: 0.5rem;
+    margin: 0 0.5rem;
+    -o-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    transition: all 0.5s;
+    -webkit-font-smoothing: antialiased;
+
+    //  hover bg color
+    &:hover {
+      background: #ef92a3;
+    }
+  }
+}
