--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -15,3 +15,13 @@ script(src="https://cdn.jsdelivr.net/npm/@barba/core")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js")
 //- local js
 script(src='/assets/script.js')
+//- google analytics
+<!-- Global site tag (gtag.js) - Google Analytics -->
+script(async src="https://www.googletagmanager.com/gtag/js?id=UA-137584426-2")
+script.
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137584426-2');
+
